# Antistasi_Translation_Sync

./: .editorconfig  .gitignore  .pydeps  LICENSE  README.rst  pyproject.toml  tasks.py
antistasi_translation_sync/: __init__.py  __main__.py  change_recorder.py  client.py  command_line_parser.py  configuration.py  constants.py  errors.py  retrier.py  stringtable.py
antistasi_translation_sync/actions/: base_action.py  sync_action.py
antistasi_translation_sync/stringtable/: __init__.py  parser.py
antistasi_translation_sync/stringtable/models/: __init__.py  container.py  entry.py  key.py  language.py  stringtable_obj.py
antistasi_translation_sync/tolgee/: __init__.py  client.py  rate_limiter.py  retrier.py
antistasi_translation_sync/tolgee/models/: __init__.py  general_project_data.py  language.py  project.py  project_info.py  tag.py  translation_comment.py  translation_entry.py  translation_key.py  translation_namespace.py
antistasi_translation_sync/validation/: builtin_arma_key_names.py  repo_usage_collector.py
antistasi_translation_sync/validation/rules/: _base_rule.py
tests/data/: Stringtable_example_complex.xml  Stringtable_example_huge_complex.xml  Stringtable_example_intermediate.xml  Stringtable_example_malformed_simple.xml  Stringtable_example_simple.xml  __init__.py
tests/stringtable/: conftest.py  test_parsing.py
tools/: build_conditionally.py  compile_deps.cmd  create_pip_freeze.cmd  create_venv.cmd  create_venv_extra_envvars.py  log_pipe_create_venv.cmd  memory_profiling_time.cmd  peewee_install_command.cmd  prepare_venv_settings.py  profiling_to_text.cmd  profiling_to_text_module.cmd  quick_pyinstaller_noconsole.bat
tools/venv_setup_settings/: post_setup_scripts.txt  required_dev.txt  required_test.txt
